Fix stretched images on iOS phones using flex columns

--- a/themes/my-theme/source/css/_base.scss
+++ b/themes/my-theme/source/css/_base.scss
@@ -65,7 +65,7 @@ main {
 
 picture {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 p {
